installed and configured typescript and ts-node-dev

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,31 @@
-FROM node:lts
-
+# Build stage
+FROM node:lts AS build
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
+COPY . .
+RUN npm run build
 
-COPY index.js ./
-
+# Production stage
+FROM node:lts
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
+COPY --from=builder /app/dist ./dist
 EXPOSE 4545
+CMD ["node", "dist/index.js"]
 
-CMD ["npm", "run", "dev"]
+
+# FROM node:lts
+
+# WORKDIR /app
+
+# COPY package*.json ./
+
+# RUN npm install
+
+# COPY index.js ./
+
+# EXPOSE 4545
+
+# CMD ["npm", "run", "dev"]
