--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.21.0",
-		"mongodb": "^6.9.0"
+		"mongodb": "^6.9.0",
+		"mongoose": "^8.7.0"
 	},
 	"devDependencies": {
 		"@types/express": "^5.0.0",
